Upgraded cruxpay to 0.2.4